[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Objects/Bullet.gd" type="Script" id=1]
[ext_resource path="res://asset/Sounds/player_shoot.wav" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.93929, 16 )

[node name="Area2D" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 8.9407e-07, -17 )
scale = Vector2( 0.8, 1.7 )

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -20.194

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -3.84366
margin_top = -32.0
margin_right = 4.15634
color = Color( 1, 0.117647, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0359955, -16 )
shape = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
